Update missing gaps
